# VoiceEmotionAvatar

./: .gitattributes  .gitignore  README.md  build_unitypackage.bat  guide_ja.md  mise.toml  pyproject.toml  setup.bat  start.bat
.github/workflows/: release.yml
docs/: implementation-plan.md  requirements.md
scripts/: build_unitypackage.py  clean.py  ensure_uv.bat
src/vea/: __init__.py  audio.py  config.py  emotion.py  gui.py  main.py  osc_sender.py  smoother.py
unity/Assets/VEA/Editor/: VeaBlendShapeEditor.cs
unity/Editor/: VeaBlendShapeEditor.cs  VeaDebugTest.cs  VeaMaSetup.cs  VeaSetupWindow.cs
