[project]
name = "voice-emotion-avatar"
version = "0.1.0"
description = "VRChat voice emotion recognition to avatar expression via OSC"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "funasr>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "python-osc>=1.8",
    "dearpygui>=1.10",
    "pyyaml>=6.0",
]

[project.scripts]
vea = "vea.main:main"

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
